# tracedemo

./: .editorconfig  .env  .gitignore  Cargo.toml  Makefile  README.md  index.js  webdriver.json
crates/tracerr/src/: lib.rs
demo/: package.json  webpack.config.js
demo/js/: index.js
src/: error.js  errors.rs  lib.rs
src/api/: mod.rs  room.rs
src/media/: manager.rs
src/one/: mod.rs  room.rs
src/two/: manager.rs  mod.rs
src/utils/: error.rs  mod.rs
tests/: check_error.js  web.rs
tests/api/: room.rs
tests/media/: manager.rs
tests/two/: manager.rs
