[package]
name = "tracedemo"
version = "0.1.0"
authors = ["Kirguir <a.shutiy@gmail.com>"]
edition = "2018"
exclude = ["/demo/"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"  # Tell `rustc` to optimize for small code size.

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
